# payme

./: .env  .envrc  .test-envrc  compose.yaml  flake.nix  payme.cabal  plan.md
app/: Main.hs
migrate/: Main.hs
migrations/: 001-create-ledger-entries.sql  002-create-accounts.sql  003-add-account-id-to-ledger-entries.sql  004-add-balance-to-accounts.sql
seed/: 001-accounts.sql  002-ledger_entries.sql
src/: API.hs  Account.hs  AccountWithLedger.hs  Config.hs  Env.hs  Ledger.hs  Logger.hs  Migrations.hs  Money.hs
src/DB/: Accounts.hs  Connection.hs  Ledger.hs
src/Effects/: AccountStore.hs  LedgerStore.hs  Log.hs
test/: BalanceSpec.hs  EnvSpec.hs  LoggerSpec.hs
