cabal-version:   3.0
name:            payme
version:         0.1.0.0
license:
author:          John Cinnamond
maintainer:      john@cinnamond.me.uk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common shared
  ghc-options:        -Wall
  build-depends:
    , base        ^>=4.19.1.0
    , bytestring  ^>=0.12.1.0
    , text        ^>=2.1.1

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Account
    AccountWithLedger
    API
    Config
    DB.Accounts
    DB.Connection
    DB.Ledger
    Effects.AccountStore
    Effects.LedgerStore
    Effects.Log
    Env
    Ledger
    Logger
    Migrations
    Money

  build-depends:
    , aeson              ^>=2.2.3.0
    , bytestring         ^>=0.12.1.0
    , effectful          ^>=2.3.1.0
    , effectful-th       ^>=1.0.0.2
    , exceptions         ^>=0.10.7
    , hasql              ^>=1.8
    , hasql-migration    ^>=0.3.1
    , hasql-th           ^>=0.4.0.22
    , hasql-transaction  ^>=1.1.1.2
    , mtl                ^>=2.3.1
    , profunctors        ^>=5.6.2
    , resource-pool      ^>=0.4.0.0
    , servant            ^>=0.20.1
    , servant-server     ^>=0.20
    , time               ^>=1.12
    , uuid               ^>=1.3.15
    , vector             ^>=0.13.1.0
    , warp               ^>=3.4.1

executable payme
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , effectful      ^>=2.3.1.0
    , payme
    , resource-pool  ^>=0.4.0.0
    , time           ^>=1.12
    , uuid           ^>=1.3.15

executable migrate
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: migrate
  build-depends:
    , bytestring         ^>=0.12.1.0
    , hasql              ^>=1.8
    , hasql-migration    ^>=0.3.1
    , hasql-transaction  ^>=1.1.1.2
    , payme

test-suite test-payme
  import:             shared
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  build-depends:
    , hasql     ^>=1.8
    , hasql-th  ^>=0.4.0.22
    , hspec     ^>=2.11.9
    , payme
    , time      ^>=1.12
    , uuid      ^>=1.3.15

  other-modules:
    BalanceSpec
    EnvSpec
